[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/World/World.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 100, 2, 100 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 200, 4, 200 )

[node name="World" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 53, 152 )
far = 20000.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.258819, -0.683013, 0.683013, 0, 0.707107, 0.707107, -0.965926, -0.183013, 0.183013, 0, 153.009, 0 )
shadow_enabled = true

[node name="Terrain" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -50, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Terrain"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Terrain/CollisionShape"]
mesh = SubResource( 2 )

[node name="ButtonAddPhysicsBody" type="Button" parent="."]
margin_left = 380.0
margin_top = 13.0
margin_right = 501.0
margin_bottom = 61.0
text = "Hold to add Balls"

[node name="ButtonBlockPhysicsProcess" type="Button" parent="."]
margin_left = 105.0
margin_top = 87.0
margin_right = 316.0
margin_bottom = 126.0
text = "Click to block physics"

[node name="ButtonBlockProcess" type="Button" parent="."]
margin_left = 374.0
margin_top = 87.0
margin_right = 531.0
margin_bottom = 127.0
text = "Click to block process"

[node name="ButtonBlockDeferred" type="Button" parent="."]
margin_left = 589.0
margin_top = 84.0
margin_right = 780.0
margin_bottom = 127.0
text = "Click to block deferred"

[connection signal="button_down" from="ButtonAddPhysicsBody" to="." method="_on_ButtonAddPhysicsBody_button_down"]
[connection signal="button_up" from="ButtonAddPhysicsBody" to="." method="_on_ButtonAddPhysicsBody_button_up"]
[connection signal="pressed" from="ButtonBlockPhysicsProcess" to="." method="_on_ButtonBlockPhysicsProcess_pressed"]
[connection signal="pressed" from="ButtonBlockProcess" to="." method="_on_ButtonBlockProcess_pressed"]
[connection signal="pressed" from="ButtonBlockDeferred" to="." method="_on_ButtonBlockDeferred_pressed"]
